@@ -1,5 +1,5 @@
 /*
- * @test
+ * @test id=UpcallHighArity-FFTT
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @modules jdk.incubator.foreign/jdk.internal.foreign
  * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
@@ -11,6 +11,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TFTT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -18,6 +25,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-FTTT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -25,6 +39,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TTTT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -33,13 +54,27 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  *
-  * @run testng/othervm/native
+ */
+
+/* @test id=UpcallHighArity-FFTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
+ * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TFTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -47,6 +82,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-FTTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -54,6 +96,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TTTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -62,6 +111,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
  *
+ */
+
+/* @test id=UpcallHighArity-FFFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -69,6 +125,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TFFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -76,6 +139,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-FTFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -83,6 +153,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TTFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -91,6 +168,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcallHighArity
  *
+ */
+
+/* @test id=UpcallHighArity-FFFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -98,6 +182,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TFFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -105,6 +196,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-FTFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -112,6 +210,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=UpcallHighArity-TTFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm/native
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -119,27 +224,60 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcallHighArity
+ */
+
+/* @test id=Downcall-FF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
  *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   TestDowncall
+ */
+
+/* @test id=Downcall-TF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
  *   TestDowncall
+ */
+
+/* @test id=Downcall-FT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   TestDowncall
+ */
+
+/* @test id=Downcall-TT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=true
  *   TestDowncall
+ */
+
+/* @test id=Upcall-TFTT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
  *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
@@ -148,13 +286,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
- * @run testng/othervm
- *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
- *   TestUpcall
+ */
+
+/* @test id=Upcall-FTTT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -162,6 +300,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
+ */
+
+/* @test id=Upcall-TTTT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -170,6 +315,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
  *
+ */
+
+/* @test id=Upcall-TFTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -177,13 +329,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
- * @run testng/othervm
- *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
- *   TestUpcall
+ */
+
+/* @test id=Upcall-FTTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -191,6 +343,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=true
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
+ */
+
+/* @test id=Upcall-TTTF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -199,6 +358,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
  *
+ */
+
+/* @test id=Upcall-TFFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -206,13 +372,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
- * @run testng/othervm
- *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
- *   TestUpcall
+ */
+
+/* @test id=Upcall-FTFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -220,6 +386,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
+ */
+
+/* @test id=Upcall-TTFT
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
@@ -227,6 +400,12 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=true
  *   TestUpcall
+ */
+
+/* @test id=Upcall-TFFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
  *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
@@ -235,13 +414,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
- * @run testng/othervm
- *   --enable-native-access=ALL-UNNAMED
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
- *   -Djdk.internal.foreign.ProgrammableInvoker.USE_INTRINSICS=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
- *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
- *   TestUpcall
+ */
+
+/* @test id=Upcall-FTFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=false
@@ -249,6 +428,13 @@
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_SPEC=false
  *   -Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false
  *   TestUpcall
+ */
+
+/* @test id=Upcall-TTFF
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @modules jdk.incubator.foreign/jdk.internal.foreign
+ * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity TestUpcall TestDowncall
+ *
  * @run testng/othervm
  *   --enable-native-access=ALL-UNNAMED
  *   -Djdk.internal.foreign.ProgrammableInvoker.USE_SPEC=true
